--- a/WebApplication11/WebApplication11.csproj
+++ b/WebApplication11/WebApplication11.csproj
@@ -8,4 +8,8 @@
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
